--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "twig/twig": "~1.28",
     "symfony/twig-bridge": "^3.3",
     "symfony/asset": "^3.3",
-    "symfony/security": "~2.8|3.0.*",
+    "symfony/security": "~3.2.*|3.*",
     "symfony/form": "~2.8|3.0.*",
     "symfony/translation": "~2.8|3.0.*",
     "symfony/config": "~2.8|3.0.*",
