--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "vendor/loisir",
   "description": "Composant pour le projet Loisir",
+  "proprietary": "djamal lamri",
 
   "require": {
     "silex/silex": "2.0.*",
