Modification pour le protocole https

--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,10 @@ RewriteEngine On
 
 
 RewriteCond %{REQUEST_URI} !web/
+RewriteCond %{REQUEST_URI} !/images/
+RewriteCond %{REQUEST_URI} !/css/
+RewriteCond %{REQUEST_URI} !/js/
 RewriteRule (.*) web/index.php
+
 
 
