corréction de bugs et ajout d'images par défaut

--- a/default-ssl.conf
+++ b/default-ssl.conf
@@ -26,6 +26,12 @@
 		
 		# On active tous les protocoles (TLS v1.0, TLS v1.1 et TLS v1.2), mais on désactive SSL v2 et v3 (obsolètes et remplacés par TLS)
 		SSLProtocol All -SSLv3 -SSLv2
+		
+		# On active les méthodes de chiffrement, et on désactive les méthodes de chiffrement non sécurisés (par la présente d'un !)
+		SSLCipherSuite HIGH:!aNULL:!MD5:!ADH:!RC4:!DH
+		
+		# On demande au navigateur de sélectionner une méthode de chiffrement en respectant l'ordre envoyée par le serveur (HIGH uniquement)
+		SSLHonorCipherOrder on
 
 		#   A self-signed (snakeoil) certificate can be created by installing
 		#   the ssl-cert package. See
@@ -36,6 +42,8 @@
 		SSLCertificateKeyFile /etc/ssl/www.cadito.fr_private_key.key
 		
 		SSLCACertificateFile /etc/ssl/certs/cadito.fr_ssl_certificate_INTERMEDIATE.cer
+		
+		Header always set Strict-Transport-Security "max-age=15768000"
 
 		#   Server Certificate Chain:
 		#   Point SSLCertificateChainFile at a file containing the
