--- a/default-ssl.conf
+++ b/default-ssl.conf
@@ -2,7 +2,16 @@
 	<VirtualHost _default_:443>
 		ServerAdmin webmaster@localhost
 
-		DocumentRoot /var/www/html
+		DocumentRoot /var/www/html/web
+
+		RewriteEngine On
+
+
+		RewriteCond %{REQUEST_URI} !web/
+		RewriteCond %{REQUEST_URI} !/images/
+		RewriteCond %{REQUEST_URI} !/css/
+		RewriteCond %{REQUEST_URI} !/js/
+		RewriteRule "(.*)" "/index.php"
 
 		# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 		# error, crit, alert, emerg.
