--- a/default-ssl.conf
+++ b/default-ssl.conf
@@ -7,7 +7,8 @@
 		RewriteEngine On
 
 
-		RewriteCond %{REQUEST_URI} !web/
+		RewriteCond %{REQUEST_URI} !web/	
+		RewriteCond %{REQUEST_URI} !/phpmyadmin/
 		RewriteCond %{REQUEST_URI} !/images/
 		RewriteCond %{REQUEST_URI} !/css/
 		RewriteCond %{REQUEST_URI} !/js/
